.docker/k8s/per_env/02-external-services.kube.yaml
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
spec:
  type: ExternalName
  externalName: elasticsearch.kube-logging.svc.cluster.local
  ports:
    - port: 9200
      name: rest
    - port: 80
      name: http
---
kind: Service
apiVersion: v1
metadata:
  name: apm-server
spec:
  type: ExternalName
  externalName: apm-server.kube-logging.svc.cluster.local
  ports:
    - port: 8200
