.docker/k8s/per_env/07-apm-service.kube.yaml
kind: Service
apiVersion: v1
metadata:
  name: apm-service
spec:
  type: ExternalName
  externalName: apm-service.kube-logging.svc.cluster.local
  ports:
    - port: 8200
