.docker/k8s/per_env/40-cubeartisan.kube.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"80": {"name": "http"}}}'
  labels:
    name: cubeartisan
  name: cubeartisan
spec:
  ports:
    - port: 80
      targetPort: 5000
      name: http
      protocol: TCP
  selector:
    name: cubeartisan
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: cubeartisan
  name: cubeartisan
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      name: cubeartisan
  template:
    metadata:
      labels:
        name: cubeartisan
    spec:
      containers:
        - name: cubeartisan
          image: "ghcr.io/cubeartisan/cubeartisan:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http
          resources:
            limits:
              memory: 2Gi
              cpu: 1000m
              ephemeral-storage: 2Gi
            requests:
              memory: 2Gi
              cpu: 1000m
              ephemeral-storage: 2Gi
          livenessProbe:
            httpGet:
              path: /version
              port: http
            failureThreshold: 1
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /version
              port: http
            initialDelaySeconds: 180
            periodSeconds: 15
          startupProbe:
            httpGet:
              path: /version
              port: http
            failureThreshold: 40
            periodSeconds: 15
      restartPolicy: Always
      imagePullSecrets:
        - name: github-docker
