.docker/k8s/per_env/40-cubeartisan.template.kube.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: cubeartisan
  name: cubeartisan
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    name: cubeartisan
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: cubeartisan
  name: cubeartisan
spec:
  selector:
    matchLabels:
      name: cubeartisan
  template:
    metadata:
      labels:
        name: cubeartisan
    spec:
      containers:
        - image: "ghcr.io/cubeartisan/cubeartisan:<TAG>"
          imagePullPolicy: Always
          name: cubeartisan
          ports:
            - containerPort: 5000
              name: cubeartisan
          resources:
            limits:
              memory: 2Gi
              cpu: 1500m
              ephemeral-storage: 2Gi
            requests:
              memory: 2Gi
              cpu: 1500m
              ephemeral-storage: 2Gi
          readinessProbe:
            httpGet:
              path: /version
              port: 5000
            initialDelaySeconds: 120
            periodSeconds: 15
          startupProbe:
            httpGet:
              path: /version
              port: 5000
            failureThreshold: 30
            periodSeconds: 15
      restartPolicy: Always
      imagePullSecrets:
        - name: github-docker
