.docker/k8s/per_env/54-ingress.template.kube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cubeartisan-ingress
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: cubeartisan-frontend-config
    cloud.google.com/backend-config: '{"default": "cubeartisan-backend-config"}'
    networking.gke.io/managed-certificates: cubeartisan-cert
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - host: <ENV>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cubeartisan
                port:
                  number: 80
